--- a/src/Tigraine.Logging/Tigraine.Logging.csproj
+++ b/src/Tigraine.Logging/Tigraine.Logging.csproj
@@ -46,6 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractLogger.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="ObjectRenderers\DefaultObjectRenderer.cs" />
+    <Compile Include="IObjectRenderer.cs" />
+    <Compile Include="Loggers\ConsoleLogger.cs" />
+    <Compile Include="LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
