--- a/src/Tigraine.Logging.Tests/Tigraine.Logging.Tests.csproj
+++ b/src/Tigraine.Logging.Tests/Tigraine.Logging.Tests.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeRendererTests.cs" />
+    <Compile Include="LogFiltering.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLogger.cs" />
   </ItemGroup>
