Added ObjectRenderer tests

--- a/src/Tigraine.Logging.Tests/Tigraine.Logging.Tests.csproj
+++ b/src/Tigraine.Logging.Tests/Tigraine.Logging.Tests.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="CompositeRendererTests.cs" />
     <Compile Include="LogFiltering.cs" />
+    <Compile Include="ObjectRendering.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLogger.cs" />
   </ItemGroup>
